# intranet-trepi

./: Makefile  README.md  docker-compose.yml  repository.toml  towncrier.toml
.github/workflows/: frontend.yml  main.yml
backend/: CONTRIBUTORS.md  Dockerfile  Dockerfile.acceptance  LICENSE.md  Makefile  README.md  bobtemplate.cfg  instance.yaml  pyproject.toml
backend/scripts/: create_site.py
backend/src/trepi/intranet/: __init__.py  configure.zcml  dependencies.zcml  permissions.zcml  profiles.zcml  testing.py
backend/src/trepi/intranet/behaviors/: configure.zcml  contato.py  endereco.py
backend/src/trepi/intranet/content/: area.py  pessoa.py
backend/src/trepi/intranet/controlpanels/: configure.zcml
backend/src/trepi/intranet/indexers/: configure.zcml  pessoa.py
backend/src/trepi/intranet/locales/: trepi.intranet.pot
backend/src/trepi/intranet/locales/en/LC_MESSAGES/: trepi.intranet.po
backend/src/trepi/intranet/locales/pt_BR/LC_MESSAGES/: trepi.intranet.po
backend/src/trepi/intranet/profiles/default/: browserlayer.xml  metadata.xml  rolemap.xml  types.xml
backend/src/trepi/intranet/profiles/default/registry/: main.xml  plone.app.querystring.interfaces.IQueryField.xml  plone.base.interfaces.controlpanel.IMailSchema.xml  plone.base.interfaces.controlpanel.INavigationSchema.xml  plone.base.interfaces.controlpanel.ISiteSchema.xml  plone.base.interfaces.controlpanel.ISocialMediaSchema.xml
backend/src/trepi/intranet/profiles/default/types/: Area.xml  Pessoa.xml
backend/src/trepi/intranet/profiles/uninstall/: browserlayer.xml
backend/src/trepi/intranet/serializers/: configure.zcml
backend/src/trepi/intranet/services/: configure.zcml
backend/src/trepi/intranet/services/clima/: configure.zcml  get.py  openmeteo.py
backend/src/trepi/intranet/setuphandlers/: __init__.py  initial.py
backend/src/trepi/intranet/subscribers/: area.py  configure.zcml
backend/src/trepi/intranet/upgrades/: catalog.py  configure.zcml  workflow.py
backend/src/trepi/intranet/vocabularies/: areas.py  cargos.py  configure.zcml  estados.py
backend/tests/: conftest.py
backend/tests/behaviors/: test_behavior_contato.py  test_behavior_endereco.py
backend/tests/content/: test_content_area.py  test_content_pessoa.py
backend/tests/services/: conftest.py  openmeteo.json  test_clima_get.py
backend/tests/setup/: test_portal_settings.py  test_setup_install.py  test_setup_uninstall.py
backend/tests/utils/: test_validadores.py
backend/tests/vocabularies/: test_voc_cargos.py  test_voc_estados.py
devops/: README-GITLAB.md
devops/stacks/: intranet.tre-pi.jus.br.yml
frontend/: .eslintrc.js  Dockerfile  Makefile  README.md  mrs.developer.json  package.json  pnpm-lock.yaml  volto.config.js
scripts/: listagem.py  popula.py
